# bitcask

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
config/: version.h.in
include/libkvs/: kvs.h  kvs_store.hpp
lib/: CMakeLists.txt  kvs.cpp  kvs_store.cpp
scripts/: run_clang_format.py
tests/: CMakeLists.txt  hello_test.cpp  kvs_cli_tests.cpp  kvs_store_tests.cpp
